--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   dio: ^5.3.3
   flutter_native_splash: ^2.2.17
   shared_preferences: ^2.1.2
-  audioplayers: ^5.2.1
   google_fonts: ^6.1.0
+  animated_flip_counter: ^0.2.6
 
 dev_dependencies:
   flutter_test:
