--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.1.2
   google_fonts: ^6.1.0
   animated_flip_counter: ^0.2.6
+  flutter_qiblah: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -87,11 +88,13 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Aref
+    - family: Somar
       fonts:
-        - asset: assets/fonts/Aref/ArefRuqaa-Regular.ttf
-        - asset: assets/fonts/Aref/ArefRuqaa-Bold.ttf
-          style: italic
+        - asset: assets/fonts/ar/Somar-Bold.otf
+        - asset: assets/fonts/ar/Somar-Light.otf
+        - asset: assets/fonts/ar/Somar-Medium.otf
+        - asset: assets/fonts/ar/Somar-Regular.otf
+        - asset: assets/fonts/ar/Somar-SemiBold.otf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
