--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,11 @@ flutter:
         - asset: assets/fonts/ar/Somar-Medium.otf
         - asset: assets/fonts/ar/Somar-Regular.otf
         - asset: assets/fonts/ar/Somar-SemiBold.otf
+
+    - family: AmiriQuran
+      fonts:
+        - asset: assets/fonts/ar/AmiriQuran-Regular.ttf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
