--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_fonts: ^6.1.0
   animated_flip_counter: ^0.2.6
   flutter_qiblah: ^2.2.0
+  cached_network_image: ^3.3.0
   expansion_tile_card: ^3.0.0
   flutter_compass: ^0.7.0
 
