--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   cached_network_image: ^3.3.0
   expansion_tile_card: ^3.0.0
   flutter_compass: ^0.7.0
+  flutter_animate: ^4.3.0
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
