--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_compass: ^0.7.0
   flutter_svg: ^2.0.9
   percent_indicator: ^4.2.3
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
